# ESP32-C6-Touch-AMOLED-2.16

./: README.md
01_Arduino_Libraries/: README.md
02_Example/Arduino-v3.3.3/01_AXP2101_Test/: 01_AXP2101_Test.ino  i2c_bsp.cpp
02_Example/Arduino-v3.3.3/02_I2C_QMI8658/: 02_I2C_QMI8658.ino  qmi8658.cpp  qmi8658.h
02_Example/Arduino-v3.3.3/03_I2C_PCF85063/: 03_I2C_PCF85063.ino  pcf85063a.cpp
02_Example/Arduino-v3.3.3/04_SD_Card/: 04_SD_Card.ino  i2c_bsp.cpp  sdcard_bsp.cpp  sdcard_bsp.h
02_Example/Arduino-v3.3.3/05_WIFI_STA/: 05_WIFI_STA.ino
02_Example/Arduino-v3.3.3/06_WIFI_AP/: 06_WIFI_AP.ino
02_Example/Arduino-v3.3.3/07_Audio_Test/: 07_Audio_Test.ino  bsp_lvgl_port.cpp  ui.cpp  ui.h  user_config.h
02_Example/Arduino-v3.3.3/08_LVGL_V8_Test/: bsp_lvgl_port.cpp  bsp_lvgl_port.h  lcd_touch.h
02_Example/Arduino-v3.3.3/09_LVGL_V9_Test/: 09_LVGL_V9_Test.ino  lcd_touch.cpp
02_Example/ESP-IDF-v5.5.3/01_AXP2101_Test/: CMakeLists.txt
02_Example/ESP-IDF-v5.5.3/02_I2C_QMI8658/: CMakeLists.txt
02_Example/ESP-IDF-v5.5.3/03_I2C_PCF85063/: CMakeLists.txt  sdkconfig.defaults
02_Example/ESP-IDF-v5.5.3/04_SD_Card/: CMakeLists.txt
02_Example/ESP-IDF-v5.5.3/05_WIFI_STA/: CMakeLists.txt
02_Example/ESP-IDF-v5.5.3/06_WIFI_AP/: CMakeLists.txt
02_Example/ESP-IDF-v5.5.3/07_Audio_Test/: CMakeLists.txt  sdkconfig.defaults
02_Example/ESP-IDF-v5.5.3/07_Audio_Test/components/port_bsp/: CMakeLists.txt  codec_bsp.cpp  codec_bsp.h  display_bsp.cpp
02_Example/ESP-IDF-v5.5.3/08_LVGL_V8_Test/: CMakeLists.txt  sdkconfig.defaults
(+39 files in other folders)
